# longpython

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
longpython/: main.py
tests/: test_longpython.py
