[tool.poetry]
name = "longpython"
version = "0.1.1"
description = "CLI tool to print long python"
authors = ["Hibiki(4513ECHO) <mail@4513echo.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/4513ECHO/longpython"
packages = [
  { include = "longpython" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed"
]

[tool.poetry.scripts]
longpython = "longpython.main:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
pre-commit = "^3.3.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
py_version = 39
profile = "black"

[tool.mypy]
python_version = "3.9"
show_error_codes = true
pretty = true
strict = true

[tool.flake8]
indent-size = 4
max-line-length = 120
