[metadata]
name = longpython
version = attr: longpython.__version__
description = CLI tool to print long python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/4513ECHO/longpython
author = Hibiki (4513ECHO)
author_email = 4513echo@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    longpython = longpython.main:main

[options.extras_require]
dev =
    pre-commit
    setuptools>=46.4.0

[options.package_data]
longpython = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 88
